<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sfu276assg1.yancao.mineseeker.MenuActivity"
    android:background="@drawable/background"
    >

    <TextView
        android:text="@string/main_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:id="@+id/text_mainMenu"
        android:textSize="28sp"
        android:textColor="@android:color/background_light"
        android:textStyle="normal|bold" />

    <Button
        android:text="@string/options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:id="@+id/btn_option"
        android:textSize="18sp"
        android:textStyle="normal|bold"
        android:layout_below="@+id/btn_play"
        android:layout_alignStart="@+id/btn_play"
        android:layout_alignEnd="@+id/btn_play" />

    <Button
        android:text="@string/play_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:id="@+id/btn_play"
        android:textStyle="normal|bold"
        android:layout_marginStart="24dp"
        android:layout_below="@+id/text_mainMenu"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/text_mainMenu"
        android:textSize="18sp" />

    <Button
        android:text="@string/help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:id="@+id/btn_help"
        android:textSize="18sp"
        android:layout_below="@+id/btn_option"
        android:layout_alignStart="@+id/btn_option"
        android:layout_alignEnd="@+id/btn_option"
        android:textStyle="normal|bold" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:srcCompat="@drawable/mainpanda"
        android:id="@+id/imageView"
        android:scaleType="fitCenter"
        android:layout_alignParentBottom="false"
        android:layout_toEndOf="@+id/text_mainMenu" />

</RelativeLayout>
