<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_option"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sfu276assg1.yancao.mineseeker.OptionActivity"
    android:background="@drawable/backgroundlight">

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:text="Settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="false"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="200dp"
            android:id="@+id/textView3"
            android:textStyle="normal|bold"
            android:textSize="30sp"
            android:textColor="@android:color/background_dark" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="100dp"
            android:layout_marginLeft="100dp"

            android:id="@+id/radioGroup_boardSize" >

        </RadioGroup>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="false"
            android:layout_marginTop="100dp"
            android:layout_marginLeft="130dp"
            android:id="@+id/radioGroup_num" />
    </TableRow>

    <Button
        android:text="@string/accept_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_AcceptOptions"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="89dp" />

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="47dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true">

        <TextView
            android:text="@string/board_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_boarSize"
            android:textSize="20sp"
            android:textStyle="normal|bold"
            android:textColor="@android:color/background_dark"
            android:layout_marginStart="103dp"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            android:layout_alignBottom="@+id/radioGroup2"
            android:layout_toEndOf="@+id/radioGroup2" />

        <TextView
            android:text="@string/pandas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/text_boarSize"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="89dp"
            android:layout_marginTop="20dp"
            android:id="@+id/text_Num"
            android:textSize="20sp"
            android:textStyle="normal|bold"
            android:textColor="@android:color/background_dark"
            android:layout_weight="1" />

    </TableRow>

</RelativeLayout>
